package com.SocialMediaPlatform.Controller;

public class AuthController {


}
