package com.SocialMediaPlatform.Dto;

public class UserLoginDto {
}
