package com.SocialMediaPlatform.Dto;

public class UserRegisterDto {
}
